<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:src="@drawable/jkt48_newcolor"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_logo_login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jkt48_apk"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:textColor="@color/pink2"
            android:fontFamily="sans-serif"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="55dp"
        android:paddingEnd="55dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="15dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:hint="Nama Lengkap"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:hint="@string/masukkan_email"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:paddingTop="20dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/masukkan_password"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:paddingTop="20dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordconf"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/masukkan_password_kembali"
                    android:ems="10"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/pink2"
                    android:text="@string/register"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="70dp"
                    android:layout_height="29dp"
                    android:textSize="8sp"
                    android:backgroundTint="@color/white"
                    android:text="@string/sign_in"
                    android:textColor="@color/pink2"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.Button.Borderless"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>