<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:backgroundTint="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/pink2"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="20dp">

        <com.denzcoskun.imageslider.ImageSlider
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imgslider"
            app:iss_period="2000"
            app:iss_delay="1500"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="20"
            app:iss_title_background="@drawable/default_gradient"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lin_blog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:scaleType="centerInside"/>

            <TextView
                style="@style/body8"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/pink2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_setlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:padding="5dp"
                android:onClick="liatOshi"
                android:scaleType="centerInside"
                android:src="@drawable/ic_blog" />

            <TextView
                style="@style/body8"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/oshi"
                android:textColor="@color/pink2" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin_handshake"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:padding="5dp"
                android:onClick="liatMember"
                android:scaleType="centerInside"
                android:src="@drawable/ic_grup" />

            <TextView
                style="@style/body8"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/teks_member"
                android:textAlignment="center"
                android:textColor="@color/pink2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_mng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_playlist"
                android:onClick="LiatLagu"/>

            <TextView
                style="@style/body8"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/teks_lagu"
                android:textAlignment="center"
                android:textColor="@color/pink2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_chant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:scaleType="centerInside"/>

            <TextView
                style="@style/body8"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/pink2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/pink2"
        android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="15dp"
            android:paddingLeft="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_bd"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="1dp"
                android:text="@string/ultah_bln"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="3dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/ashel"
                            app:civ_border_color="@color/bening"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/shapee"
                            android:gravity="center"
                            android:text="@string/anggota_jkt48"
                            android:textColor="@color/textwarna"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/body8"
                            android:text="@string/ashel"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/flora"
                            app:civ_border_color="@color/bening"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/shapee"
                            android:gravity="center"
                            android:text="@string/anggota_jkt48"
                            android:textColor="@color/textwarna"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/body8"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="@string/flora"
                            android:textColor="@color/white" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/marsha"
                            app:civ_border_color="@color/bening"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/shapee"
                            android:gravity="center"
                            android:text="@string/anggota_jkt48"
                            android:textColor="@color/textwarna"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/body8"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="@string/marsha"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:paddingBottom="5dp"
                            android:src="@drawable/freya"
                            app:civ_border_color="@color/bening"
                            app:civ_border_width="1dp" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/shapee"
                            android:gravity="center"
                            android:text="@string/anggota_jkt48"
                            android:textColor="@color/textwarna"
                            android:textSize="8sp"
                            android:textStyle="bold" />

                        <TextView
                            style="@style/body8"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="@string/freya"
                            android:textColor="@color/white" />
                    </LinearLayout>


            </LinearLayout>
        
    </LinearLayout>

</LinearLayout>